add properties and keywords file

--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,5 @@ sentence=Programming water mist.
 paragraph=With this library, you can use my Programming Fog board, to create fun interactions with water mist.
 category=Communication
 url=https://github.com/soryone1/fog
-architectures=*
+includes=fog.h
+architectures=avr
